--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the main branch
 on:
   push:
-    branches: [ main, galva041/ci_setup ]
+    branches: [ main, galva041/failing_tests ]
   pull_request:
     branches: [ main ]
 
@@ -26,11 +26,12 @@ jobs:
           sobmodule: recursive 
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Run cmake .
+        run: cmake .
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: make executables
+        run: make
+
+      - name: run tests
+        run: ./tests
