--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,7 @@ jobs:
         run: cmake .
 
       # Runs a set of commands using the runners shell
-      - name: Run make and build file
+      - name: Run make and build file, execute tests
         run: make
-
-      -name: execute tests
         run: ./tests
           
