--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run make and build file, execute tests
-        run: make
-        run: ./tests
+        run: |
+          make
+          ./test
           
