--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         run: cmake .
 
       # Runs a set of commands using the runners shell
-      - name: |
+      - name: RUn make and build files
+        run: |
         make
         ./tests
