--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the main branch
 on:
   push:
-    branches: [ main, galva041/failing_tests]
+    branches: [galva041/failing_tests]
   pull_request:
     branches: [ main ]
 
