--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
 on:
-  push:
-    branches: [ main, cdo032/passing_tests]
+  # push:
+  #   branches: [ main, cdo032/passing_tests]
   pull_request:
     branches: [ main ]
 
@@ -22,7 +22,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
-          submodule: googletest
+          submodule: recursive
 
       # Runs a single command using the runners shell
       - name: Run cmake .
