--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          submodule: recursive
+          submodules: recursive
 
       # Runs a single command using the runners shell
       - name: Run cmake .
