--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the main branch
 on:
   push:
-    branches: [galva041/failing_tests]
+    branches: [ main, galva041/failing_tests ]
   pull_request:
     branches: [ main ]
 
@@ -22,7 +22,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
-          submodule: recursive 
+        submodule: recursive 
 
       # Runs a single command using the runners shell
       - name: Run cmake .
